# micscriptlib

./: .LICENSE.swp  .gitignore  CHANGELOG.md  Dockerfile  INSTALL.rst  MANIFEST.in  README.md  README.rst  VERSION  builddocker.sh  cleandirs  condasetup  dockershell.sh  pyproject.toml  refresh  requirements.txt  setup.cfg  setup.py  testdocker.sh
.github/workflows/: showversion.yml
docs/: conf.py  make.bat  usage.rst
micscriptlib/: extractgms.py  extractrtvals  rundelayvar.py  runrapidtides.py  runretroglms.py  runretroregress.py  splitrapidtide.py  util.py  util2.py
micscriptlib/data/: fsregionlist
micscriptlib/scripts/: extractgms  extractgms_launcher  extractrtvals  rundelayvar_launcher  runrapidtides_launcher  runretroglms_launcher  runretroregress_launcher  splitrapidtide  splitrapidtide_launcher  vasc_extractrtvals
