[build-system]
requires = ["setuptools", "wheel"]

[project]
name = 'micscriptlib'
description = 'Routines to simplify the creation of neuroimaging proc scripts.'
authors = [
  { name='Blaise Frederick', email='blaise.frederick@gmail.com' },
]
readme = 'README.rst'
classifiers = [
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
requires-python = '>=3.8'
dependencies = [
  'rapidtide',
]
dynamic = ['version']

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "micscriptlib/_version.py"
versionfile_build = "micscriptlib/_version.py"
tag_prefix = ""
parentdir_prefix = "micscriptlib-"


[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['micscriptlib']

[tool.setuptools.package-data]
micscriptlib = ['micscriptlib/*.py', 'micscriptlib/workflows/*.py', 'micscriptlib/scripts/*']

[tool.setuptools.exclude-package-data]
micscriptlib = ['.eggs', '.git', '.github', '.pytest_cache']


[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | get_version.py
  | versioneer.py
  | micscriptlib/_version.py
)
'''
